chore: add supabase

--- a/apps/app/.eslintrc.json
+++ b/apps/app/.eslintrc.json
@@ -6,11 +6,12 @@
             "files": ["*.ts"],
             "extends": ["plugin:@nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
             "rules": {
+                "@angular-eslint/component-class-suffix": "off",
                 "@angular-eslint/directive-selector": [
                     "error",
                     {
                         "type": "attribute",
-                        "prefix": "nosework",
+                        "prefix": "nw",
                         "style": "camelCase"
                     }
                 ],
@@ -18,7 +19,7 @@
                     "error",
                     {
                         "type": "element",
-                        "prefix": "nosework",
+                        "prefix": "nw",
                         "style": "kebab-case"
                     }
                 ]
