--- a/nx.json
+++ b/nx.json
@@ -55,7 +55,10 @@
             "unitTestRunner": "jest"
         },
         "@nx/angular:component": {
-            "style": "less"
+            "style": "less",
+            "standalone": true,
+            "skipTests": true,
+            "changeDetection": "OnPush"
         }
     }
 }
