--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
     "@nx/angular": "16.8.1",
+    "@supabase/supabase-js": "^2.33.1",
     "@taiga-ui/addon-mobile": "^3.43.0",
     "@taiga-ui/cdk": "^3.43.0",
     "@taiga-ui/core": "^3.43.0",
