--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "npx nx build app"
+  },
   "prettier": "@taiga-ui/prettier-config",
   "dependencies": {
     "@angular/animations": "~16.2.0",
