--- a/apps/app/project.json
+++ b/apps/app/project.json
@@ -26,6 +26,11 @@
             "glob": "**/*",
             "input": "node_modules/@taiga-ui/icons/src",
             "output": "assets/taiga-ui/icons"
+          },
+          {
+            "glob": "_redirects",
+            "input": "apps/app",
+            "output": "/"
           }
         ],
         "styles": [
