--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~16.2.0",
     "@angular/platform-browser-dynamic": "~16.2.0",
     "@angular/router": "~16.2.0",
+    "@angular/service-worker": "16.2.4",
     "@nx/angular": "16.8.1",
     "@supabase/supabase-js": "^2.33.1",
     "@taiga-ui/addon-mobile": "^3.44.0",
@@ -40,6 +41,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
+    "@angular/pwa": "^16.2.2",
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "16.8.1",
     "@nx/js": "16.8.1",
