--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@taiga-ui/kit": "^3.44.0",
     "@taiga-ui/layout": "^3.44.0",
     "@taiga-ui/styles": "^3.44.0",
+    "compressorjs": "^1.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
